--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Chocolate Pizza</title>
   <link rel="stylesheet" href="css/reset.css">
@@ -7,12 +8,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Pattaya&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <header>
-    
+
     <navbar>
       <div class="head">
-        <img class = "titleimage" src="./img/small-logo.png" alt="knife and fork">
+        <img class="titleimage" src="./img/small-logo.png" alt="knife and fork">
         <p class="delicious">Delicious</p>
         <article class="title">THE BEST FOOD BLOG ON THE WEB</article>
       </div>
@@ -37,37 +39,114 @@
     <img class="printicon" src="./img/print-icon.png" alt="print icon">
     <article class="print">PRINT</article>
     <img class="choco" src="./img/choco-pizza.png" alt="choco">
-    <p>For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.</p>
+    <p>For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of
+      the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until
+      you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.</p>
 
-    <p>Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fix mixture is cooled.</p>
+    <p>Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely
+      dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until
+      the fix mixture is cooled.</p>
 
-    <p>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let sping and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or a glass tupperware. Freeze for at least two hours before serving.</p>
+    <p>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer
+      instructions, i.e., let sping and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts.
+      Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or a glass tupperware. Freeze
+      for at least two hours before serving.</p>
 
-    <!-- <img class="notepad" src="./img/list-bg.png" alt="yellow notepad"> -->
-    <ul>
-      <li>milk</li>
-      <li>adawd</li>
-      <li>ingredients</li>
-      <li>ingredients</li>
-      <li>ingredients</li>
-      <li>ingredients</li>
-      <li>ingredients</li>
-      <li>ingredients</li>
-      <li>ingredients</li>
-      <li>ingredients</li>
-      <li>ingredients</li>
-      <li>ingredients</li>
-    </ul>
+    <div class="container">
+      <figure>
+        <img class="notepad" src="./img/list-bg.png" alt="yellow notepad">
+
+      </figure>
+
+
+      <ul class="list">
+        <li>
+          <label>
+            <input type="checkbox" />
+            <span>1 1/2 Cups Milk</span>
+          </label>
+        </li>
+        <li>
+          <label>
+            <input type="checkbox" />
+            <span>1/2 cup mascarpone</span>
+          </label>
+        </li>
+        <li>
+          <label>
+            <input type="checkbox" />
+            <span>1/2 tsp pink salt</span>
+          </label>
+        </li>
+        <li>
+          <label>
+            <input type="checkbox" />
+            <span>1/2 tsp pink salt</span>
+          </label>
+        </li>
+        <li>
+          <label>
+            <input type="checkbox" />
+            <span>1/2 cup brown sugar</span>
+          </label>
+        </li>
+        <li>
+          <label>
+            <input type="checkbox" />
+            <span>2-4 tsp water</span>
+          </label>
+        </li>
+        <li>
+          <label>
+            <input type="checkbox" />
+            <span>1 1/2 cups heavy cream</span>
+          </label>
+        </li>
+        <li>
+          <label>
+            <input type="checkbox" checked />
+            <span><s>1/3 grounded sugar</s></span>
+          </label>
+        </li>
+        <li>
+          <label>
+            <input type="checkbox" checked />
+            <span><s>2 egg yolks</s></span>
+          </label>
+        </li>
+        <li>
+          <label>
+            <input type="checkbox" />
+            <span>1 lemon juice</span>
+          </label>
+        </li>
+        <li>
+          <label>
+            <input type="checkbox" />
+            <span>2 tbsp butter</span>
+          </label>
+        </li>
+        <li>
+          <label>
+            <input type="checkbox" />
+            <span>1 cup honey roasted pecans, roughly chooped</span>
+          </label>
+        </li>
+
+
+      </ul>
+    </div>
 
     <img class="bar" src="./img/hr-img.png" alt="bar">
 
-    <div>
-    <img class="vanessa" src="./img/van-pic.png" alt="picture of Vanessa">
-    <h3>
-      Vanessa Stevenson
-    </h3>
-    <p class= "bio">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    <button>SHARE RECIPE</button>
+    <div class="stuff">
+      <img class="vanessa" src="./img/van-pic.png" alt="picture of Vanessa">
+      <h3>
+        Vanessa Stevenson
+      </h3>
+      <p class="bio">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        labore et dolore magna aliqua.</p>
+      <button>SHARE RECIPE</button>
     </div>
   </main>
   <footer>
@@ -76,4 +155,5 @@
     <p class="finalline">Proudly published with Ghost.</p>
   </footer>
 </body>
+
 </html>
